--- a/templates/result.html
+++ b/templates/result.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ url_for('index') }}">
-        <img src="{{ url_for('static','logo.png') }}" width="30" height="30" class="me-2">
+        <img src="{{ url_for('static', filename='logo.png') }}" width="30" height="30" class="me-2">
         Ari & Rishu’s SAT Prep APP
       </a>
     </div>
